syntax = "proto3";
package networkpb;

message PeerInfo {
    string id = 1;
    repeated string address = 2;
}
